force-app/main/default/objects/Field_Label__c/Field_Label__c.object-meta.xml
<CustomObject>
    <label>Field Label</label>
    <nameField>
        <displayFormat>FL-{000}</displayFormat>
        <label>Field Label Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>