force-app/main/default/objects/Field_Label__c/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <inlineHelpText>DO NOT EDIT THIS FIELD!!!!</inlineHelpText>
    <label>Field API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>