force-app/main/default/objects/Field_Label__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Badges for Baseball</fullName>
            </value>
            <value>
                <fullName>GREAT</fullName>
            </value>
            <value>
                <fullName>Healthy Lifestyles</fullName>
            </value>
            <value>
                <fullName>OVC</fullName>
            </value>
            <value>
                <fullName>Special Initiative</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>TRAIL</fullName>
            </value>
            <value>
                <fullName>MDGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>