force-app/main/default/objects/Field_Label__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>