force-app/main/default/objects/Field_Label__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application__c</fullName>
            </value>
            <value>
                <fullName>Application_Site__c</fullName>
            </value>
            <value>
                <fullName>Assessment__c</fullName>
                <default>true</default>
                <label>Assessment__c</label>
            </value>
            <value>
                <fullName>Grantee_Report__c</fullName>
            </value>
            <value>
                <fullName>Progress_Report__c</fullName>
            </value>
            <value>
                <fullName>Victims_Served_Report__c</fullName>
            </value>
            <value>
                <fullName>Program_Plan__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>