force-app/main/default/objects/Field_Label__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>FirstPic National Org Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>BBBSA</fullName>
            </value>
            <value>
                <fullName>LEGO</fullName>
            </value>
            <value>
                <fullName>NPAL</fullName>
            </value>
            <value>
                <fullName>Ripken</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>NCAI</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>BJAG</fullName>
            </value>
            <value>
                <fullName>MDGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>