force-app/main/default/objects/Field_Label__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Sponsored</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>