force-app/main/default/objects/Field_Label__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Mid-Year</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>