force-app/main/default/objects/Field_Label__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>