force-app/main/default/objects/Field_Label__c/listViews/Application_Fields.listView-meta.xml
<ListView>
    <fullName>Application_Fields</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Organization__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Application__c,Application_Site__c</value>
    </filters>
    <label>Application Fields</label>
</ListView>