force-app/main/default/objects/Field_Label__c/listViews/DCTAT_Fields.listView-meta.xml
<ListView>
    <fullName>DCTAT_Fields</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Year__c</columns>
    <columns>Field_API__c</columns>
    <columns>Label__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Grantee_Report__c</value>
    </filters>
    <filters>
        <field>Grant_Type__c</field>
        <operation>notEqual</operation>
        <value>STEM</value>
    </filters>
    <label>DCTAT Fields</label>
</ListView>