force-app/main/default/objects/Field_Label__c/listViews/I_m_GREAT.listView-meta.xml
<ListView>
    <fullName>I_m_GREAT</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Label__c</columns>
    <columns>Field_API__c</columns>
    <columns>Object__c</columns>
    <columns>Grant_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grant_Type__c</field>
        <operation>equals</operation>
        <value>All</value>
    </filters>
    <filters>
        <field>Grant_Type__c</field>
        <operation>includes</operation>
        <value>GREAT</value>
    </filters>
    <label>I&apos;m GREAT</label>
</ListView>