force-app/main/default/objects/Field_Label__c/listViews/OVC.listView-meta.xml
<ListView>
    <fullName>OVC</fullName>
    <columns>NAME</columns>
    <columns>Field_API__c</columns>
    <columns>Object__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grant_Type__c</field>
        <operation>includes</operation>
        <value>OVC</value>
    </filters>
    <label>OVC</label>
</ListView>