force-app/main/default/objects/Field_Label__c/listViews/OVC_Fields.listView-meta.xml
<ListView>
    <fullName>OVC_Fields</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Year__c</columns>
    <columns>Field_API__c</columns>
    <columns>Label__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grant_Type__c</field>
        <operation>includes</operation>
        <value>OVC</value>
    </filters>
    <filters>
        <field>Object__c</field>
        <operation>includes</operation>
        <value>Application__c</value>
    </filters>
    <label>OVC Application Fields</label>
</ListView>