force-app/main/default/objects/Field_Label__c/listViews/Program_Plans.listView-meta.xml
<ListView>
    <fullName>Program_Plans</fullName>
    <columns>NAME</columns>
    <columns>Field_API__c</columns>
    <columns>Object__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>includes</operation>
        <value>Program_Plan__c</value>
    </filters>
    <label>Program Plans</label>
</ListView>